dynamic caption position label responsive to layout; fix uniform grid gallery layout on narrow screens

--- a/styles/article.css
+++ b/styles/article.css
@@ -150,13 +150,24 @@ article h3 + * {
 	margin-bottom: calc(-1 * var(--column-gap));
 }
 .gallery.multi-caption figure:nth-last-of-type(3) figcaption::before {
-	content: 'Above';
+	content: 'Top';
 }
 .gallery.multi-caption figure:nth-last-of-type(2) figcaption::before {
 	content: 'Left';
 }
 .gallery.multi-caption figure:nth-last-of-type(1) figcaption::before {
 	content: 'Right';
+}
+@media (width < 600px) {
+	.gallery.multi-caption[data-stacks-below="600"] figure:nth-of-type(1) figcaption::before {
+		content: 'Top';
+	}
+	.gallery.multi-caption[data-stacks-below="600"] figure:nth-of-type(2):nth-last-of-type(2) figcaption::before {
+		content: 'Middle';
+	}
+	.gallery.multi-caption[data-stacks-below="600"] figure:nth-last-of-type(1) figcaption::before {
+		content: 'Bottom';
+	}
 }
 
 .gallery.figure-plaque-pair {
